creating navigation bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <header>
         <nav id="main-nav" aria-label="Main">
-          <!-- list of links to main website locations -->
+          <home, recipes, tutorials, submissions, blog>
         </nav>
     </header>
     <body>
@@ -18,7 +18,7 @@
       
     <footer>
         <nav id="footer-nav" aria-label="Main">
-          <!-- list of links to main website locations -->
+          <home, recipes, tutorials, submissions, blog>
         </nav>
     </footer>
       
