--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
-        <title><h1>BK</h1></title>
+        <title>Document</title>
     </head>
-
     <header>
         <nav id="main-nav" aria-label="Main">
-          <home, recipes, tutorials, submissions, blog>
+          <<a>home</a> <a>recipes</a> <a>tutorials</a> <a>submissions</a> <a>blog</a>>
         </nav>
     </header>
     <body>
+        <h1>BK</h1>
         <img src="https://images.squarespace-cdn.com/content/v1/5531eb6de4b0c759b385ac75/1560479909116-HN4PHGEH8P3URAE0OAQ6/Screen+Shot+2019-06-13+at+6.26.02+PM.png?format=1000w" alt="hand with long acrylic finger nails grabing breakfast meats with tongs" />
         <p>Have you ever gotten a craving for something simple like baked chicken? But maybe not just any old baked chicken. You want it baked like your favorite auntie would do it—with the mustard marinade and tri-color peppers. You need to know the mustard brand, the exact seasoning blend, and if she baked it in a cast iron or not. In BAPs kitchen you’ll find every herb and spice, every teaspoon and handful. We crafted this website to compile recipes passed down and around from friends and family alike.</p>
     </body>
       
     <footer>
         <nav id="footer-nav" aria-label="Main">
-          <home, recipes, tutorials, submissions, blog>
+          <<a>home</a> <a>recipes</a> <a>tutorials</a> <a>submissions</a> <a>blog</a>>
         </nav>
     </footer>
       
