still working on nav bar

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <footer>
         <nav class="menu">
             <ul>
-              <li><a href="https://">Home</a></li>
-              <li><a href="https://">Recipies</a></li>
-              <li><a href="https://">Tutorials</a></li>
-              <li><a href="https://">Submissions</a></li>
-              <li><a href="https://">Flavor of the Week</a></li>
+              <a href="https://">Home</a></li>
+              <a href="https://">Recipies</a></li>
+              <a href="https://">Tutorials</a></li>
+              <a href="https://">Submissions</a></li>
+              <a href="https://">Flavor of the Week</a></li>
             </ul>
         </nav>
     </footer>
